# readwise-reader-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  api.py  constants.py  document.py  htmlreadinglistexporter.py  pyproject.toml  readercli.py  reading_list.py  requirements.txt  tox.ini
.github/: continuous_integration.yml
.github/workflows/: continuous_integration.yml
readercli/: __init__.py  __main__.py  api.py  commands.py  constants.py  data.py  document.py  layout.py  models.py  types.py  utils.py
readercli/reading_list/: __init__.py  extractors.py
src/readercli/: utils.py
src/readwise_reader_cli/: __main__.py  api.py  commands.py  constants.py  data.py  layout.py  models.py  utils.py
src/readwise_reader_cli/reading_list/: extractors.py
tests/: test_api.py  test_cli.py  test_layout.py  test_utils.py
tests/resources/: CustomReadingList.html  highlghts.json  notes.json  test-file.csv
tests/resources/sample_api_results/: document.json  notes.json
tests/resources/sample_reading_lists/: BadURL.html
