[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "readwise-reader-cli"
description = "Engage with your Readwise Reader library through your command-line."
readme = "README.md"
authors = [{name = "Scott Carvalho", email = "scottcarvalho71@gmail.com"}]
license = { file = "LICENSE" }
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

keywords = ["api", "readwise", "cli", "python"]
dependencies = [
    "click >= 8.1.3",
    "python-dateutil",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "xdg-base-dirs",
    "rich",
    "pydantic"
]

requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pre-commit",
    "pytest",
]
dev = [
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/Scarvy/readwise-reader-cli"

[project.scripts]
calc = "readercli.__main__:cli"

[tool.flit.sdist]
exclude = [
    "tests/resources/",
]

[tool.flit.module]
name = "readercli"