[project]
name = "readwise-reader-cli"
version = "0.0.1"
description = "Engage with your Readwise Reader library through your command-line."
authors = [{ name = "Scott Carvalho", email = "scottcarvalho71@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "api",
    "readwise",
    "cli",
    "python",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click >= 8.1.3",
    "python-dateutil",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "xdg-base-dirs",
    "rich",
    "pydantic",
]

[dependency-groups]
test = [
    "pytest",
    "ruff",
]

[project.scripts]
rw-cli = "readwise_reader_cli.__main__:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
